[package]
name = "cborjson"
version = "0.1.0"
authors = ["Grant Perry <grant.perry@csiro.au>"]
edition = "2018"

[lib]
name = "cbortojson"
path = "src/lib.rs"

[[bin]]
name = "cborjson"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
serde_cbor = "0.10"
